force-app/main/default/objects/Bundle_Member__c/Bundle_Member__c.object-meta.xml
<CustomObject>
    <description>Join object that relates Products to Bundles</description>
    <label>Bundle Member</label>
    <nameField>
        <displayFormat>BMN-{000000}</displayFormat>
        <label>Bundle Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>