force-app/main/default/objects/Bundle_Member__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <description>The bundle that this bundle-member applied to</description>
    <label>Bundle</label>
    <referenceTo>Bundle__c</referenceTo>
    <relationshipLabel>Bundle Members</relationshipLabel>
    <relationshipName>Bundle_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>