force-app/main/default/objects/Bundle_Member__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that this bundle member adds. Ideally this would be required at the field level, but Product lookups cannot be made required -- SF limitation.</description>
    <inlineHelpText>Required!</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Members</relationshipLabel>
    <relationshipName>Bundle_Members</relationshipName>
    <type>Lookup</type>
</CustomField>